# ormlite

./: .gitignore  .readthedocs  .readthedocs.yaml  LICENSE  README.md  TODO.md  coverage.sh  doc-preview.sh  preview-docs.sh  pyproject.toml  release.sh  test.sh
.github/workflows/: publish.yml
docs/: conf.py  index.rst  ormlite.rst  requirements.txt
ormlite/: __init__.py  adapters.py  migrate.py  orm.py  query.py  utils.py
spec/: test_migrate.py
src/ormlite/: __init__.py  adapters.py  errors.py  migrate.py  orm.py  query.py  sqlite.py  utils.py
src/spec/: test_migrate.py  test_orm.py  test_query.py  utils.py
tests/: __init__.py  test_migrate.py  test_orm.py  test_query.py
