[project]
name = "ormlite"
version = "0.0.1"
[project.optional-dependencies] 
dev = [ "black", "pytest", "pytest-cov" ]

[tool.pyright]
include = ["ormlite/"]
# typeCheckingMode = "strict"

reportUnusedImport = "information"
reportUnusedVariable = "information"
reportPrivateUsage = "error"
reportMissingTypeStubs = "warning"
reportMissingParameterType = "error"
reportSelfClsParameterName = "error"
